<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackPrimary"
    tools:context=".screens.HomeScreen.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeToolbar"
                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
                app:titleTextAppearance="@style/ToolbarTitle">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/white" />
                <LinearLayout
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <ImageView
                        android:id="@+id/headphone_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:contentDescription="headphone"
                        android:src="@drawable/baseline_headset_24" />

                    <ImageView
                        android:id="@+id/user_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:contentDescription="user"
                        android:src="@drawable/baseline_person_24" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/loading"
                style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:indeterminate="true"
                app:mpb_progressStyle="horizontal"
                app:mpb_useIntrinsicPadding="false" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:text="@string/discover_music"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textAlignment="center"
                    android:backgroundTint="@color/purple_500"/>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/genre1"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        app:cornerRadius="20dp"
                        android:layout_margin="4dp"
                        android:text="Pop"
                        android:backgroundTint="@color/purple_200"
                        android:textAlignment="center" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/genre2"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        app:cornerRadius="20dp"
                        android:layout_margin="4dp"
                        android:text="Rock"
                        android:textAlignment="center"
                        android:backgroundTint="@color/purple_200"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/genre3"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        app:cornerRadius="20dp"
                        android:layout_margin="4dp"
                        android:text="Jazz"
                        android:textAlignment="center"
                        android:backgroundTint="@color/purple_200"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/genre4"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        app:cornerRadius="20dp"
                        android:layout_margin="4dp"
                        android:text="EDM"
                        android:textAlignment="center"
                        android:backgroundTint="@color/purple_200"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:text="@string/popular_songs"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_songs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>